# hawkeye

./: .gitignore  Cargo.toml  README.md
hawkeye/: Cargo.toml
hawkeye-common/: Cargo.toml
hawkeye-common/src/: lib.rs
hawkeye-ebpf/: Cargo.toml
hawkeye-ebpf/src/: main.rs
hawkeye-mock/: Cargo.toml
hawkeye-mock/src/: main.rs
hawkeye/src/: alert.rs  cli.rs  main.rs
xtask/src/: build.rs  build_ebpf.rs  run.rs
