[package]
name = "hawkeye-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
env_logger = "0.11.3"
log = "0.4.22"
nix = { version = "0.29.0", features = ["time"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
