[package]
name = "hawkeye"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
hawkeye-common = { path = "../hawkeye-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1.6.0"
serde = "1.0.203"
serde_json = "1.0.120"

[[bin]]
name = "hawkeye"
path = "src/main.rs"
